--- a/ProjectSquad/Main.storyboard
+++ b/ProjectSquad/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="htr-Ow-TLC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qmp-Or-pwB">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -41,7 +41,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="172" y="72" width="176" height="30"/>
+                                    <rect key="frame" x="172" y="48" width="176" height="30"/>
                                 </variation>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="R9z-Uo-qvf">
@@ -62,6 +62,15 @@
                                     <rect key="frame" x="0.0" y="411" width="400" height="75"/>
                                 </variation>
                             </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Squad Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcA-tq-Txo">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="28" y="48" width="99" height="21"/>
+                                </variation>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Begin Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="39g-CT-UHm">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -84,22 +93,13 @@
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" title="Next"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="116" y="533" width="169" height="30"/>
+                                    <rect key="frame" x="116" y="550" width="169" height="30"/>
                                 </variation>
                                 <connections>
                                     <action selector="goToInvite:" destination="qmp-Or-pwB" eventType="touchUpInside" id="BAg-DQ-8mp"/>
+                                    <segue destination="8DG-8W-z5Q" kind="show" identifier="inviteSegue" id="2sE-sC-NFI"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OtV-Uu-hTh">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="85" y="129" width="263" height="63"/>
-                                </variation>
-                            </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#squadgoals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0RK-nE-n4J">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -109,15 +109,14 @@
                                     <rect key="frame" x="28" y="111" width="129" height="21"/>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Squad Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcA-tq-Txo">
-                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Fill in a description for this Squad (optional)" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OtV-Uu-hTh">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="28" y="72" width="99" height="21"/>
+                                    <rect key="frame" x="85" y="140" width="263" height="63"/>
                                 </variation>
-                            </label>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -125,12 +124,12 @@
                                 <exclude reference="WpC-DV-El5"/>
                                 <exclude reference="R9z-Uo-qvf"/>
                                 <exclude reference="DsP-v2-PXM"/>
+                                <exclude reference="CcA-tq-Txo"/>
                                 <exclude reference="39g-CT-UHm"/>
                                 <exclude reference="y9s-G4-A5M"/>
                                 <exclude reference="tFQ-Ch-jYP"/>
-                                <exclude reference="OtV-Uu-hTh"/>
                                 <exclude reference="0RK-nE-n4J"/>
-                                <exclude reference="CcA-tq-Txo"/>
+                                <exclude reference="OtV-Uu-hTh"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -138,42 +137,24 @@
                                 <include reference="WpC-DV-El5"/>
                                 <include reference="R9z-Uo-qvf"/>
                                 <include reference="DsP-v2-PXM"/>
+                                <include reference="CcA-tq-Txo"/>
                                 <include reference="39g-CT-UHm"/>
                                 <include reference="y9s-G4-A5M"/>
                                 <include reference="tFQ-Ch-jYP"/>
-                                <include reference="OtV-Uu-hTh"/>
                                 <include reference="0RK-nE-n4J"/>
-                                <include reference="CcA-tq-Txo"/>
+                                <include reference="OtV-Uu-hTh"/>
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="FdX-rC-6cp"/>
                     <connections>
                         <outlet property="endTimeDatePicker" destination="DsP-v2-PXM" id="x7o-Wa-VcJ"/>
                         <outlet property="squadNameTextField" destination="WpC-DV-El5" id="rjB-6u-cmL"/>
                         <outlet property="startTimeDatePicker" destination="R9z-Uo-qvf" id="XC3-N5-LD1"/>
-                        <segue destination="8DG-8W-z5Q" kind="show" identifier="inviteSegue" id="OwQ-JA-E8N"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUH-4h-1sn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1288.5" y="756"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="61s-9L-70v">
-            <objects>
-                <navigationController id="htr-Ow-TLC" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EUc-hK-E3u">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="qmp-Or-pwB" kind="relationship" relationship="rootViewController" id="z4E-qi-LPS"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TWv-mN-SSw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1975.5" y="756"/>
+            <point key="canvasLocation" x="-1174.5" y="774"/>
         </scene>
         <!--Add Friend View Controller-->
         <scene sceneID="d8i-Af-KDB">
@@ -213,13 +194,13 @@
                                                         <rect key="frame" x="36" y="11" width="298" height="21"/>
                                                     </variation>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-Yf-w1A">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-Yf-w1A">
                                                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                     <variation key="widthClass=compact" fixedFrame="YES">
                                                         <rect key="frame" x="351" y="8" width="22" height="22"/>
                                                     </variation>
                                                     <connections>
-                                                        <action selector="addFriend:" destination="3BU-Ag-BBM" eventType="touchUpInside" id="m2C-yg-Sqk"/>
+                                                        <action selector="addFBFriend:" destination="3BU-Ag-BBM" eventType="touchUpInside" id="RqL-kg-CUD"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -254,6 +235,7 @@
                                 </variation>
                                 <connections>
                                     <action selector="createSquad:" destination="8DG-8W-z5Q" eventType="touchUpInside" id="x9X-31-0sg"/>
+                                    <segue destination="bHH-bg-23o" kind="presentation" identifier="createdSquadSegue" id="eTx-Yn-iRR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -275,7 +257,6 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="UbR-fe-HIX" id="rJb-Dq-9N9"/>
-                        <segue destination="bHH-bg-23o" kind="presentation" identifier="createdSquadSegue" id="dxx-CY-rmT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uPj-d4-AvO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -337,6 +318,7 @@
                                 </variation>
                                 <connections>
                                     <action selector="setUsername:" destination="xMH-XL-SJ3" eventType="touchUpInside" id="pCZ-Ug-8Hl"/>
+                                    <segue destination="qmp-Or-pwB" kind="presentation" id="piV-2g-hgb"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -358,12 +340,11 @@
                     </view>
                     <connections>
                         <outlet property="usernameTextField" destination="P0h-kX-BwP" id="Xz4-Ob-MdH"/>
-                        <segue destination="htr-Ow-TLC" kind="presentation" identifier="usernameSetSegue" id="Pqo-e5-pAL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tyP-nf-ByM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2016" y="-30"/>
+            <point key="canvasLocation" x="-1350" y="22"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="zAR-GO-xUL">
@@ -385,6 +366,7 @@
                                 </variation>
                                 <connections>
                                     <action selector="test" destination="O1M-R7-pGv" eventType="touchUpInside" id="mjA-m3-cQx"/>
+                                    <segue destination="qmp-Or-pwB" kind="presentation" identifier="loggedInSegue" id="BKi-MX-rwa"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="emV-aS-jNR">
@@ -420,12 +402,11 @@
                         <outlet property="imageView" destination="emV-aS-jNR" id="dbV-qo-fPY"/>
                         <outlet property="testImageView" destination="3cc-TZ-0Fy" id="bMe-oK-bE3"/>
                         <segue destination="xMH-XL-SJ3" kind="presentation" identifier="setUsernameSegue" id="od7-yw-OoU"/>
-                        <segue destination="htr-Ow-TLC" kind="presentation" identifier="loggedInSegue" id="Ubv-iq-Aj8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oEO-P6-Xuq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2773.5" y="756"/>
+            <point key="canvasLocation" x="-1915.5" y="756"/>
         </scene>
         <!--Map-->
         <scene sceneID="zdT-a2-Vyp">
@@ -526,6 +507,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Ubv-iq-Aj8"/>
+        <segue reference="piV-2g-hgb"/>
     </inferredMetricsTieBreakers>
 </document>
