--- a/ProjectSquad/Base.lproj/Main.storyboard
+++ b/ProjectSquad/Base.lproj/Main.storyboard
@@ -61,27 +61,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xer-ZP-ftT">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.5450980392" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                <state key="normal" title="Create Squad">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="114" y="329" width="172" height="56"/>
-                                </variation>
-                                <connections>
-                                    <action selector="createSquad:" destination="7C6-dn-h7t" eventType="touchUpInside" id="Cej-bV-yxV"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Squad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3X-ZM-EF7">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="65"/>
                                 <color key="textColor" red="1" green="0.5450980392" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="85" y="144" width="231" height="90"/>
+                                    <rect key="frame" x="85" y="100" width="231" height="90"/>
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9hU-iV-IRD">
@@ -92,26 +78,48 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="114" y="456" width="172" height="57"/>
+                                    <rect key="frame" x="0.0" y="523" width="400" height="57"/>
                                 </variation>
                                 <connections>
                                     <action selector="goToRequests:" destination="7C6-dn-h7t" eventType="touchUpInside" id="hfh-qd-G2f"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SquadIconLarge" translatesAutoresizingMaskIntoConstraints="NO" id="DBT-5G-JQt">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="104" y="215" width="192" height="150"/>
+                                </variation>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xer-ZP-ftT">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.5450980392" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Create Squad">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="434" width="400" height="56"/>
+                                </variation>
+                                <connections>
+                                    <action selector="createSquad:" destination="7C6-dn-h7t" eventType="touchUpInside" id="Cej-bV-yxV"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="Xer-ZP-ftT"/>
                                 <exclude reference="s3X-ZM-EF7"/>
                                 <exclude reference="9hU-iV-IRD"/>
+                                <exclude reference="DBT-5G-JQt"/>
+                                <exclude reference="Xer-ZP-ftT"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="Xer-ZP-ftT"/>
                                 <include reference="s3X-ZM-EF7"/>
                                 <include reference="9hU-iV-IRD"/>
+                                <include reference="DBT-5G-JQt"/>
+                                <include reference="Xer-ZP-ftT"/>
                             </mask>
                         </variation>
                     </view>
@@ -300,7 +308,7 @@
                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RequestCell" rowHeight="202" id="1Ii-rS-dlp" customClass="RequestCell" customModule="ProjectSquad" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="202"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="202"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Ii-rS-dlp" id="TGy-BE-JT2">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="201.5"/>
@@ -662,48 +670,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mZq-6e-vWN">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Squad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gCU-LZ-EwX">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="44"/>
+                                <color key="textColor" red="1" green="0.5450980392" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="177" y="453" width="46" height="30"/>
+                                    <rect key="frame" x="107" y="56" width="186" height="47"/>
                                 </variation>
-                                <connections>
-                                    <action selector="test" destination="O1M-R7-pGv" eventType="touchUpInside" id="mjA-m3-cQx"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="emV-aS-jNR">
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAb-pH-bzn">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="221" y="457" width="0.0" height="0.0"/>
+                                </variation>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SquadIconLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Tf4-9c-mGI">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="28" y="72" width="240" height="128"/>
-                                </variation>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3cc-TZ-0Fy">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="140" y="478" width="240" height="128"/>
+                                    <rect key="frame" x="80" y="129" width="240" height="128"/>
                                 </variation>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="mZq-6e-vWN"/>
-                                <exclude reference="emV-aS-jNR"/>
-                                <exclude reference="3cc-TZ-0Fy"/>
+                                <exclude reference="gCU-LZ-EwX"/>
+                                <exclude reference="gAb-pH-bzn"/>
+                                <exclude reference="Tf4-9c-mGI"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="mZq-6e-vWN"/>
-                                <include reference="emV-aS-jNR"/>
-                                <include reference="3cc-TZ-0Fy"/>
+                                <include reference="gCU-LZ-EwX"/>
+                                <include reference="gAb-pH-bzn"/>
+                                <include reference="Tf4-9c-mGI"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="emV-aS-jNR" id="dbV-qo-fPY"/>
-                        <outlet property="testImageView" destination="3cc-TZ-0Fy" id="bMe-oK-bE3"/>
                         <segue destination="xMH-XL-SJ3" kind="presentation" identifier="setUsernameSegue" id="od7-yw-OoU"/>
                         <segue destination="htr-Ow-TLC" kind="presentation" identifier="loggedInSegue" id="Ubv-iq-Aj8"/>
                         <segue destination="bHH-bg-23o" kind="presentation" identifier="hasSquadSegue" id="xGh-tP-eez"/>
@@ -763,7 +771,7 @@
                     <connections>
                         <outlet property="map" destination="wai-4j-O2j" id="hPK-mb-JTN"/>
                         <segue destination="wT0-7Q-2da" kind="show" identifier="showSquadOverview" id="ZBn-eX-Gw1"/>
-                        <segue destination="7C6-dn-h7t" kind="presentation" identifier="squadExpiredSegue" id="5r6-Pv-CoY"/>
+                        <segue destination="htr-Ow-TLC" kind="presentation" identifier="squadExpiredSegue" id="udh-vA-VSA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BJ5-RP-Zm5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -810,7 +818,7 @@
                         </variation>
                     </view>
                     <connections>
-                        <segue destination="7C6-dn-h7t" kind="presentation" identifier="leaveSquadSegue" id="btv-7E-NzZ"/>
+                        <segue destination="htr-Ow-TLC" kind="presentation" identifier="leaveSquadSegue" id="Yua-tc-omU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yJo-gK-QPi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -844,10 +852,10 @@
     <resources>
         <image name="Chat Filled-50" width="50" height="50"/>
         <image name="Map Marker-50" width="50" height="50"/>
+        <image name="SquadIconLarge" width="1000" height="1000"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="xGh-tP-eez"/>
         <segue reference="Ubv-iq-Aj8"/>
-        <segue reference="Q2z-4Q-e1l"/>
     </inferredMetricsTieBreakers>
 </document>
